# fried-mushroom

./: .gitignore  CLAUDE.md  README.md  SECURITY.md  package-lock.json  pyproject.toml
.claude/: settings.json
.claude/commands/: review.md
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  deploy-dashboard.yml  deploy-log.yml
d4d_pipeline/: schemas.py
d4d_pipeline/layer_05_risk/: likelihood.py
d4d_pipeline/layer_06_response/: flight_comms.py  payload_nav.py  run.py
d4d_pipeline/layer_07_planning/: altitude.py  run.py
docs/: ADR.md  ARCHITECTURE.md  PRD.md  RAG-corpus-round3.md  RAG-corpus.md
docs/D4D/: 01. 지상 정보 센터 AI.md  02. UAV Sensor Layer.md  03. Sensor Abstraction Layer.md  04. Threat Modeling.md  05. Risk Assessment.md  06. Response.md  서비스 소개.md  (+13 more)
examples/: README.md  acoustic_waveform_synth.json  expected_multi.json  expected_pipeline_recon.json  expected_pipeline_strike.json  expected_strike.json  expected_t1.json  expected_t2.json  expected_t3.json  expected_t4.json  expected_t5.json  expected_t6.json  expected_t7.json  imagery_frame_synth.json  mission_brief_hwajinpo.json  mission_brief_multi.json  mission_brief_strike.json  mission_brief_t1.json  mission_brief_t2.json  mission_brief_t3.json  mission_brief_t4.json  mission_brief_t5.json  mission_brief_t6.json  mission_brief_t7.json  qualities_multi_primed.json  raw_multi.json  raw_t1.json  raw_t2.json  raw_t3.json  raw_t4.json  raw_t5.json  raw_t6.json  raw_t7.json  scenario_t3.json  set_mission_hwajinpo.json  set_mission_recon.json  set_mission_strike.json  set_mission_t3.json
scripts/: dev_stack.sh
src/: mission_pipeline.py
tests/: test_constants.py  test_layer_boundaries.py  test_mission_pipeline.py  test_pipeline_golden.py  test_schemas.py  test_smoke.py
(+319 files in other folders)
