[project]
name = "d4d-pipeline"
version = "0.0.1"
requires-python = ">=3.11"

# 선택 의존 — 코어 파이프라인은 stdlib 만. semantic: RAG narrative 임베딩(첫 실 ML 모델,
# infra/log/embedding.py) + 벡터 재순위 활성화. 미설치 시 코퍼스 회수는 메타필터-only 로
# 자동 하향(SCC-1 advisory). sentence-transformers = 텍스트→벡터, sqlite-vec = 재순위
# 활성 게이트(corpus._VEC_BACKEND_AVAILABLE). 둘 다 있어야 retrieve_semantic 이 실제 재순위한다.
[project.optional-dependencies]
semantic = ["sentence-transformers>=2.2", "sqlite-vec>=0.1.9"]
# ml: 코퍼스 기반 numpy 실 ML 모델(outcome_model 결과예측 / novelty_model 이례성). 미설치 시
# 각 모델이 미학습으로 자동 하향(SCC-1 advisory) — 코어 파이프라인은 stdlib-only 그대로.
ml = ["numpy>=1.24"]
# perception: 03 실 perception 모델 스택(음향 YAMNet/TF Hub 포함). ONBOARD_PERCEPTION_MODEL=1 opt-in.
# 미설치 시 lazy import 실패 → stub 자동 폴백(SCC-1, 결정론/골든 불변).
perception = ["tensorflow>=2.13", "tensorflow-hub>=0.14"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = ["src"]
addopts = "-ra --strict-markers"
